--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -19,10 +19,10 @@
                     <nav>
                         <ul class="nav nav-tabs nav-fill w-100">
                             <li class="nav-item">
-                                <a class="nav-link active" data-bs-toggle="tab" href="index.html">Home</a>
+                                <a class="nav-link" data-bs-toggle="tab" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-bs-toggle="tab" href="about.html">About</a>
+                                <a class="nav-link active" data-bs-toggle="tab" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-bs-toggle="tab" href="projects.html">Projects</a>
@@ -48,7 +48,8 @@
             <div class="col-lg-8 p-3 m-0 text-dark"
                 style="background-color: rgba(255,255,255, 0.5); border-radius: 15px; border: solid 2px #808080;color: #504f54; min-height: max-content;">
                 <div class="m-3">
-                    <h3 class="text-center" style="font-stretch: extra-expanded;">HOME</h3>
+                    <h3 class="text-center" style="font-stretch: extra-expanded;">
+                        ABOUT</h3>
                     <br />
                 </div>
             </div>
