--- a/about.html
+++ b/about.html
@@ -19,19 +19,19 @@
                     <nav>
                         <ul class="nav nav-tabs nav-fill w-100">
                             <li class="nav-item">
-                                <a class="nav-link" data-bs-toggle="tab" href="index.html">Home</a>
+                                <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" data-bs-toggle="tab" href="about.html">About</a>
+                                <a class="nav-link active" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-bs-toggle="tab" href="projects.html">Projects</a>
+                                <a class="nav-link" href="projects.html">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-bs-toggle="tab" href="blog.html">Blog</a>
+                                <a class="nav-link" href="blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-bs-toggle="tab" href="contact.html">Contact</a>
+                                <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </nav>
