add links to email and website

--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,10 @@
                 <div class="m-3">
                     <h3 class="text-center" style="font-stretch: extra-expanded;">CONTACT</h3>
                     <br />
-                    <p><b>Email: </b> lachelle.anne@gmail.com</p>
-                    <p><b>LinkedIn: </b> linkedin.com/in/lachelle-anne/</p>
+                    <p><b>Email: </b><a href="mailto:lachelle.anne@gmail.com">lachelle.anne@gmail.com</a></p>
+                    <p><b>LinkedIn: </b><a
+                            href="https://www.linkedin.com/in/lachelle-anne/">https://www.linkedin.com/in/lachelle-anne/</a>
+                    </p>
 
                 </div>
             </div>
