Footer addition, removed contact page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="blog.html">Blog</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
-                            </li>
                         </ul>
                     </nav>
                     <div id="myTabContent" class="tab-content">
@@ -48,8 +45,13 @@
             <div class="col-lg-8 p-3 m-0 text-dark"
                 style="background-color: rgba(255,255,255, 0.5); border-radius: 15px; border: solid 2px #808080;color: #504f54; min-height: max-content;">
                 <div class="m-3">
-                    <h3 class="text-center" style="font-stretch: extra-expanded;">HOME</h3>
+                    <h3 class="text-center">L A C H E L L E &emsp; P A V L O V I C
+                    </h3>
                     <br />
+                    <section></section>
+                    <aside><img src="images/profile_img.jpg" alt="lachelle-anne"
+                            style="width: 40%; float: right; border-radius: 90px; border: 2px solid lightgray">
+                    </aside>
                 </div>
             </div>
         </div>
@@ -57,7 +59,21 @@
 
     <footer class="border-top border-light footer w-100 fixed-bottom">
         <div class="container">
-            <div>Powered by lachelle-anne</div>
+            <div>
+                <p style="text-align: center;">
+                    <a href="mailto:lachelle.anne@gmail.com"><img src="images/envelope-fill.svg" alt="email"
+                            style="height: 25px;"></a>
+                    &emsp;
+                    <a href="https://www.instagram.com/la_codes/"><img src="images/instagram.svg" alt="instagram"
+                            style="height: 25px;"></a>
+                    &emsp;
+                    <a href="https://www.linkedin.com/in/lachelle-anne/"><img src="images/linkedin.svg" alt="linkedin"
+                            style="height: 25px;"></a>
+                    &emsp;
+                    <a href="https://github.com/lachelle-anne"><img src="images/instagram.svg" alt="github"
+                            style="height: 25px;"></a>
+                </p>
+            </div>
         </div>
     </footer>
     <script src="lib/jquery/jquery.min.js"></script>
