--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <header>
         <div class="navigation fixed-top" style="padding: 10px;">
             <div class="row">
-                <div class="col-lg-12 ">
+                <div class="col-lg-12">
                     <nav>
                         <ul class="nav nav-tabs nav-fill w-100">
                             <li class="nav-item">
@@ -29,9 +29,6 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="blog.html">Blog</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -49,7 +46,7 @@
                 style="background-color: rgba(255,255,255, 0.5); border-radius: 15px; border: solid 2px #808080;color: #504f54; min-height: max-content;">
                 <div class="m-3">
                     <h3 class="text-center" style="font-stretch: extra-expanded;">
-                        ABOUT</h3>
+                        A B O U T</h3>
                     <br />
                 </div>
             </div>
@@ -58,7 +55,21 @@
 
     <footer class="border-top border-light footer w-100 fixed-bottom">
         <div class="container">
-            <div>Powered by lachelle-anne</div>
+            <div>
+                <p style="text-align: center;">
+                    <a href="mailto:lachelle.anne@gmail.com"><img src="images/envelope-fill.svg" alt="email"
+                            style="height: 25px;"></a>
+                    &emsp;
+                    <a href="https://www.instagram.com/la_codes/"><img src="images/instagram.svg" alt="instagram"
+                            style="height: 25px;"></a>
+                    &emsp;
+                    <a href="https://www.linkedin.com/in/lachelle-anne/"><img src="images/linkedin.svg" alt="linkedin"
+                            style="height: 25px;"></a>
+                    &emsp;
+                    <a href="https://github.com/lachelle-anne"><img src="images/instagram.svg" alt="github"
+                            style="height: 25px;"></a>
+                </p>
+            </div>
         </div>
     </footer>
     <script src="lib/jquery/jquery.min.js"></script>
