--- a/about.html
+++ b/about.html
@@ -48,6 +48,8 @@
                     <h3 class="text-center" style="font-stretch: extra-expanded;">
                         A B O U T</h3>
                     <br />
+                    <h5>Education</h5>
+                    <h5>Experience</h5>
                 </div>
             </div>
         </div>
