--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="col-lg-8 p-3 m-0 text-dark"
                 style="background-color: rgba(255,255,255, 0.5); border-radius: 15px; border: solid 2px #808080;color: #504f54; min-height: max-content;">
                 <div class="m-3">
-                    <h3 class="text-center">L A C H E L L E &emsp; P A V L O V I C
-                    </h3>
+                    <h3 class="text-center">L A C H E L L E</h3>
+                    <h6 class="text-center">P A V L O V I C</h6>
                     <br />
                     <section></section>
                     <aside><img src="images/profile_img.jpg" alt="lachelle-anne"
