--- a/index.html
+++ b/index.html
@@ -56,25 +56,16 @@
             </div>
         </div>
     </div>
-
-    <footer class="border-top border-light footer w-100 fixed-bottom">
-        <div class="container">
-            <div>
-                <p style="text-align: center;">
-                    <a href="mailto:lachelle.anne@gmail.com"><img src="images/envelope-fill.svg" alt="email"
-                            style="height: 25px;"></a>
-                    &emsp;
-                    <a href="https://www.instagram.com/la_codes/"><img src="images/instagram.svg" alt="instagram"
-                            style="height: 25px;"></a>
-                    &emsp;
-                    <a href="https://www.linkedin.com/in/lachelle-anne/"><img src="images/linkedin.svg" alt="linkedin"
-                            style="height: 25px;"></a>
-                    &emsp;
-                    <a href="https://github.com/lachelle-anne"><img src="images/instagram.svg" alt="github"
-                            style="height: 25px;"></a>
-                </p>
-            </div>
-        </div>
+    <footer class="border-top border-light footer w-100 fixed-bottom"
+        style="display: flex; justify-content: center; align-items: center;">
+        <a class="footerLink" href="mailto:lachelle.anne@gmail.com"><img src="images/envelope-fill.svg" alt="email"
+                style="height: 25px;" /></a>
+        <a class="footerLink" href="https://www.instagram.com/la_codes/"><img src="images/instagram.svg" alt="instagram"
+                style="height: 25px;" /></a>
+        <a class="footerLink" href="https://www.linkedin.com/in/lachelle-anne/"><img src="images/linkedin.svg"
+                alt="linkedin" style="height: 25px;" /></a>
+        <a class="footerLink" href="https://github.com/lachelle-anne"><img src="images/github.svg" alt="github"
+                style="height: 25px;" /></a>
     </footer>
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
