--- a/projects.html
+++ b/projects.html
@@ -45,11 +45,20 @@
             <div class="col-lg-8 p-3 m-0 text-dark"
                 style="background-color: rgba(255,255,255, 0.5); border-radius: 15px; border: solid 2px #808080;color: #504f54; min-height: max-content;">
                 <div class="m-3">
-                    <h3 class="text-center" style="font-stretch: extra-expanded;">P R O J E C T S</h3>
+                    <h3 class="text-center">P R O J E C T S</h3>
                     <br />
+                    <div class="imageContainer"><img src="images/OrderManagementSystem.JPG" alt="orderManagementSystem"
+                            class="image">
+                        <div class="overlay">
+                            <a target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne">
+                                <div class="text">Hello World</div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <footer class="border-top border-light footer w-100 fixed-bottom"
         style="display: flex; justify-content: center; align-items: center;">
