--- a/projects.html
+++ b/projects.html
@@ -50,8 +50,9 @@
                     <div class="imageContainer"><img src="images/OrderManagementSystem.JPG" alt="orderManagementSystem"
                             class="image">
                         <div class="overlay">
-                            <a target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne">
-                                <div class="text">Hello World</div>
+                            <a target="_blank" rel="noopener noreferrer"
+                                href="https://github.com/lachelle-anne/order-management-system">
+                                <div class="text">Order Management System</div>
                             </a>
                         </div>
                     </div>
