--- a/index.html
+++ b/index.html
@@ -41,17 +41,37 @@
         </div>
     </header>
     <div class="container" style="padding-top: 70px; padding-bottom: 60px;">
-        <div class="row justify-content-center" style="height: calc(100vh - 80px - 70px);">
+        <div class="row justify-content-center"
+            style="height: calc(100vh - 80px - 70px); padding-left: 10px; padding-right: 10px;">
             <div class="col-lg-8 p-3 m-0 text-dark"
                 style="background-color: rgba(255,255,255, 0.5); border-radius: 15px; border: solid 2px #808080;color: #504f54; min-height: max-content;">
                 <div class="m-3">
                     <h3 class="text-center">L A C H E L L E</h3>
                     <h6 class="text-center">P A V L O V I C</h6>
                     <br />
-                    <section></section>
-                    <aside><img src="images/profile_img.jpg" alt="lachelle-anne"
-                            style="width: 40%; float: right; border-radius: 90px; border: 2px solid lightgray">
-                    </aside>
+                    <section>
+                        <article>
+                            <h5><u>TECHNICAL SKILLS</u></h5>
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                                <li>C#</li>
+                                <li>React</li>
+                                <li>React Native</li>
+                            </ul>
+                            <br />
+                            <h5><u>IDE's</u></h5>
+                            <ul>
+                                <li>Microsoft SQL Server</li>
+                                <li>Visual Studio</li>
+                                <li>Visual Studio Code</li>
+                            </ul>
+                        </article>
+                        <aside><img src="images/profile_img.jpg" alt="lachelle-anne"
+                                style="width: 60%; float: right; border-radius: 90px; border: 2px solid lightgray">
+                        </aside>
+                    </section>
                 </div>
             </div>
         </div>
