--- a/about.html
+++ b/about.html
@@ -41,15 +41,33 @@
         </div>
     </header>
     <div class="container" style="padding-top: 70px; padding-bottom: 60px;">
-        <div class="row justify-content-center" style="height: calc(100vh - 80px - 70px);">
+        <div class="row justify-content-center"
+            style="height: calc(100vh - 80px - 70px);  padding-left: 10px; padding-right: 10px;">
             <div class="col-lg-8 p-3 m-0 text-dark"
-                style="background-color: rgba(255,255,255, 0.5); border-radius: 15px; border: solid 2px #808080;color: #504f54; min-height: max-content;">
+                style="background-color: rgba(255,255,255, 0.5); border-radius: 15px; border: solid 2px #808080;color: #504f54; min-height: max-content; max-height: calc(100vh - 80px - 70px);">
                 <div class="m-3">
-                    <h3 class="text-center" style="font-stretch: extra-expanded;">
-                        A B O U T</h3>
+                    <h3 class="text-center">A B O U T</h3>
                     <br />
-                    <h5>Education</h5>
-                    <h5>Experience</h5>
+                    <section>
+                        <div class="row">
+                            <h5 style="text-align: center;"><u>EDUCATION</u></h5>
+                            <div class="column">
+                                <p>DIPLOMA IN SOFTWARE DEVELOPMENT 2021</p>
+                                <p style="line-height: 1vmin;"><b>TAFE NSW</b></p>
+                                <p style="line-height: 1vmin;">Completed Certificate</p>
+                            </div>
+                            <div class="column">
+                                <p>CERTIFICATE IV IN PROGRAMMING 2020</p>
+                                <p style="line-height: 1vmin;"><b>TAFE NSW</b></p>
+                                <p style="line-height: 1vmin;">Completed Certificate</p>
+                            </div>
+                            <div class="column">
+                                <p>CERTIFICATE IN WORKFORCE ESSENTIALS 2016</p>
+                                <p style="line-height: 1vmin;"><b>Charles Sturt University</b></p>
+                                <p style="line-height: 1vmin;">Completed Certificate</p>
+                            </div>
+                        </div>
+                    </section>
                 </div>
             </div>
         </div>
