--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,8 @@
         </div>
     </header>
     <div class="container" style="padding-top: 70px; padding-bottom: 60px;">
-        <div class="row justify-content-center" style="height: calc(100vh - 80px - 70px);">
+        <div class="row justify-content-center"
+            style="height: calc(100vh - 80px - 70px);  padding-left: 10px; padding-right: 10px;">
             <div class="col-lg-8 p-3 m-0 text-dark"
                 style="background-color: rgba(255,255,255, 0.5); border-radius: 15px; border: solid 2px #808080;color: #504f54; min-height: max-content;">
                 <div class="m-3">
