--- a/blog.html
+++ b/blog.html
@@ -70,6 +70,8 @@
                 alt="linkedin" style="height: 25px;" /></a>
         <a class="footerLink" href="https://github.com/lachelle-anne"><img src="images/github.svg" alt="github"
                 style="height: 25px;" /></a>
+        <a class="footerLink" href="https://skillshop.exceedlms.com/profiles/64b3b51ffb7d48c68118f1fb904ebf18"><img
+                src="images/google.svg" alt="google qualifications" style="height: 25px;" /></a>
     </footer>
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
