--- a/projects.html
+++ b/projects.html
@@ -19,69 +19,54 @@
     </script>
 </head>
 
-<body class="position-fixed w-100">
+<body>
     <header>
-        <div class="navigation fixed-top" style="padding: 10px;">
-            <div class="row">
-                <div class="col-lg-12 ">
-                    <nav>
-                        <ul class="nav nav-tabs nav-fill w-100">
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about.html">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="projects.html">Projects</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="blog.html">Blog</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div id="myTabContent" class="tab-content">
-                        <div class="tab-pane fade show active" id="home"></div>
-                    </div>
-                </div>
+        <div class="navigation">
+            <nav>
+                <ul class="nav nav-tabs nav-fill">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="projects.html">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="blog.html">Blog</a>
+                    </li>
+                </ul>
+            </nav>
+            <div id="myTabContent" class="tab-content">
+                <div class="tab-pane fade show active" id="home"></div>
             </div>
-        </div>
         </div>
     </header>
-    <div class="container" style="padding-top: 70px; padding-bottom: 60px;">
-        <div class="row justify-content-center"
-            style="height: calc(100vh - 80px - 70px);  padding-left: 10px; padding-right: 10px;">
-            <div class="col-lg-8 p-3 m-0 text-dark"
-                style="background-color: rgba(255,255,255, 0.5); border-radius: 15px; border: solid 2px #808080;color: #504f54; min-height: max-content;">
-                <div class="m-3">
-                    <h3 class="text-center">P R O J E C T S</h3>
-                    <br />
-                    <div class="imageContainer"><img src="images/OrderManagementSystem.JPG" alt="orderManagementSystem"
-                            class="image">
-                        <div class="overlay">
-                            <a target="_blank" rel="noopener noreferrer"
-                                href="https://github.com/lachelle-anne/order-management-system">
-                                <div class="text">Order Management System</div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container">
+        <div class="heading-row">
+            <h3 class="text-center">P R O J E C T S</h3>
+        </div>
+        <div class="projects">
+            <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="html,result"
+                data-slug-hash="KKmrvxe" data-preview="true" data-user="lachelle-anne"
+                style="height: 400px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+                <span>See the Pen <a href="https://codepen.io/lachelle-anne/pen/KKmrvxe">
+                    </a> by Lachelle (<a href="https://codepen.io/lachelle-anne">@lachelle-anne</a>)
+                    on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
         </div>
     </div>
-    </div>
-    <footer class="border-top border-light footer w-100 fixed-bottom"
-        style="display: flex; justify-content: center; align-items: center;">
-        <a class="footerLink" href="mailto:lachelle.anne@gmail.com"><img src="images/envelope-fill.svg" alt="email"
-                style="height: 25px;" /></a>
-        <a class="footerLink" href="https://www.instagram.com/la_codes/"><img src="images/instagram.svg" alt="instagram"
-                style="height: 25px;" /></a>
-        <a class="footerLink" href="https://www.linkedin.com/in/lachelle-anne/"><img src="images/linkedin.svg"
-                alt="linkedin" style="height: 25px;" /></a>
-        <a class="footerLink" href="https://github.com/lachelle-anne"><img src="images/github.svg" alt="github"
-                style="height: 25px;" /></a>
-        <a class="footerLink" href="https://skillshop.exceedlms.com/profiles/64b3b51ffb7d48c68118f1fb904ebf18"><img
-                src="images/google.svg" alt="google qualifications" style="height: 25px;" /></a>
+    <footer class="border-top border-light footer fixed-bottom">
+        <a class="footer-links" href="mailto:lachelle.anne@gmail.com"><img class="footer-icon"
+                src="images/envelope-fill.svg" alt="email" /></a>
+        <a class="footer-links" href="https://www.instagram.com/la_codes/"><img class="footer-icon"
+                src="images/instagram.svg" alt="instagram" /></a>
+        <a class="footer-links" href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon"
+                src="images/linkedin.svg" alt="linkedin" /></a>
+        <a class="footer-links" href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/github.svg"
+                alt="github" /></a>
     </footer>
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
