about section update

--- a/about.html
+++ b/about.html
@@ -51,19 +51,25 @@
             <h5><u>EDUCATION</u></h5>
         </div>
         <div class="about-column-one">
-            <p>DIPLOMA IN SOFTWARE DEVELOPMENT 2021</p>
-            <p><b>TAFE NSW</b></p>
-            <p>Completed Certificate</p>
+            <div class="bubble">
+                <p>DIPLOMA IN SOFTWARE DEVELOPMENT 2021</p>
+                <p><b>TAFE NSW</b></p>
+                <p>Completed Certificate</p>
+            </div>
         </div>
         <div class="about-column-two">
-            <p>CERTIFICATE IV IN PROGRAMMING 2020</p>
-            <p><b>TAFE NSW</b></p>
-            <p>Completed Certificate</p>
+            <div class="bubble">
+                <p>CERTIFICATE IV IN PROGRAMMING 2020</p>
+                <p><b>TAFE NSW</b></p>
+                <p>Completed Certificate</p>
+            </div>
         </div>
         <div class="about-column-three">
-            <p>CERTIFICATE IN WORKFORCE ESSENTIALS 2016</p>
-            <p><b>Charles Sturt University</b></p>
-            <p>Completed Certificate</p>
+            <div class="bubble">
+                <p>CERTIFICATE IN WORKFORCE ESSENTIALS 2016</p>
+                <p><b>Charles Sturt University</b></p>
+                <p>Completed Certificate</p>
+            </div>
         </div>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
