Revert "about section update"
This reverts commit 4c42a888d6c6172bac9d063a0dcff823373a5d5f.

--- a/index.html
+++ b/index.html
@@ -52,70 +52,14 @@
             <h5><u>SKILLS</u></h5>
         </div>
         <div class="home-column-one">
-            <div class="bar">
-                <div class="info">
-                    <span>HTML</span>
-                </div>
-                <div class="progress-line html">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>CSS</span>
-                </div>
-                <div class="progress-line css">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>React</span>
-                </div>
-                <div class="progress-line react">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>React Native</span>
-                </div>
-                <div class="progress-line react-native">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>JavaScript</span>
-                </div>
-                <div class="progress-line javascript">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>C#</span>
-                </div>
-                <div class="progress-line c-sharp">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>SQL</span>
-                </div>
-                <div class="progress-line sql">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>Google Analytics</span>
-                </div>
-                <div class="progress-line google-analytics">
-                    <span></span>
-                </div>
-            </div>
+            <div class="bar back basic" data-skill="JavaScript"></div>
+            <div class="bar middle intermediate" data-skill="C#"></div>
+            <div class="bar middle intermediate" data-skill="React"></div>
+            <div class="bar middle intermediate" data-skill="React Native"></div>
+            <div class="bar middle intermediate" data-skill="Google Analytics"></div>
+            <div class="bar front advanced" data-skill="SQL"></div>
+            <div class="bar front advanced" data-skill="CSS"></div>
+            <div class="bar front advanced" data-skill="HTML"></div>
         </div>
         <div class="home-column-two">
             <img class="profile-image" src="images/profile_img.jpg" alt="lachelle-anne">
