add spock-rock-game project

--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
             <h3 class="text-center">L A C H E L L E</h3>
             <h6 class="text-center">P A V L O V I C</h6>
         </div>
-        <div class="about-subheading-one">
-            <h5><u>SKILLS</u></h5>
-        </div>
+        <h5 class="about-subheading-one">SKILLS
+        </h5>
         <div class="home-column-one">
             <div class="bar">
                 <div class="info">
