--- a/projects.html
+++ b/projects.html
@@ -47,16 +47,29 @@
         <div class="heading-row">
             <h3 class="text-center">P R O J E C T S</h3>
         </div>
-        <div class="projects">
-            <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="html,result"
-                data-slug-hash="KKmrvxe" data-preview="true" data-user="lachelle-anne"
-                style="height: 400px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-                <span>See the Pen <a href="https://codepen.io/lachelle-anne/pen/KKmrvxe">
-                    </a> by Lachelle (<a href="https://codepen.io/lachelle-anne">@lachelle-anne</a>)
-                    on <a href="https://codepen.io">CodePen</a>.</span>
-            </p>
-            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-        </div>
+        <h5 class="project-title-one">CALCULATOR</h4>
+            <div class="project-one">
+                <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="html,result"
+                    data-slug-hash="KKmrvxe" data-user="lachelle-anne" data-zoom="0.5"
+                    style="height: 400px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+                    <span>See the Pen <a href="https://codepen.io/lachelle-anne/pen/KKmrvxe">
+                        </a> by Lachelle (<a href="https://codepen.io/lachelle-anne">@lachelle-anne</a>)
+                        on <a href="https://codepen.io">CodePen</a>.</span>
+                </p>
+                <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+            </div>
+            <h5 class="project-title-two">SPOCK ROCK GAME</h5>
+            <div class="project-two">
+                <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="html,result"
+                    data-slug-hash="MWmxVgL" data-user="lachelle-anne" data-zoom="0.5"
+                    style="height: 400px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+                    <span>See the Pen <a href="https://codepen.io/lachelle-anne/pen/MWmxVgL">
+                            spock-rock-game</a> by Lachelle (<a
+                            href="https://codepen.io/lachelle-anne">@lachelle-anne</a>)
+                        on <a href="https://codepen.io">CodePen</a>.</span>
+                </p>
+                <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+            </div>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
         <a class="footer-links" href="mailto:lachelle.anne@gmail.com"><img class="footer-icon"
