--- a/about.html
+++ b/about.html
@@ -47,9 +47,8 @@
         <div class="heading-row">
             <h3 class="text-center">A B O U T</h3>
         </div>
-        <div class="about-subheading-one">
-            <h5><u>EDUCATION</u></h5>
-        </div>
+        <h5 class="about-subheading-one">EDUCATION
+        </h5>
         <div class="about-column-one">
             <div class="bubble">
                 <p>DIPLOMA IN SOFTWARE DEVELOPMENT 2021</p>
