--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <title>Lachelle Pavlovic</title>
     <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="styles.css?v=1" rel="stylesheet" />
+    <link href="styles.css?v=2" rel="stylesheet" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
     <script>
@@ -49,7 +49,7 @@
         </div>
         <h5 class="project-title-one">CALCULATOR</h4>
             <div class="project-one">
-                <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="html,result"
+                <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="result"
                     data-slug-hash="KKmrvxe" data-user="lachelle-anne" data-zoom="0.5"
                     style="height: 400px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
                     <span>See the Pen <a href="https://codepen.io/lachelle-anne/pen/KKmrvxe">
@@ -60,7 +60,7 @@
             </div>
             <h5 class="project-title-two">SPOCK ROCK GAME</h5>
             <div class="project-two">
-                <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="html,result"
+                <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="result"
                     data-slug-hash="MWmxVgL" data-user="lachelle-anne" data-zoom="0.5"
                     style="height: 400px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
                     <span>See the Pen <a href="https://codepen.io/lachelle-anne/pen/MWmxVgL">
