--- a/about.html
+++ b/about.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="styles.css?v=2" rel="stylesheet" />
+    <link href="styles.css?v=3" rel="stylesheet" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
     <script>
@@ -34,7 +33,7 @@
                         <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="blog.html">Blog</a>
+                        <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                 </ul>
             </nav>
@@ -47,7 +46,7 @@
         <div class="heading-row">
             <h3 class="text-center">A B O U T</h3>
         </div>
-        <h5 class="about-subheading-one">EDUCATION
+        <h5 class="subheading-one">EDUCATION
         </h5>
         <div class="about-column-one">
             <div class="bubble">
@@ -81,9 +80,6 @@
         <a class="footer-links" href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/github.svg"
                 alt="github" /></a>
     </footer>
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/twitter-bootstrap/js/bootstrap.js"></script>
 </body>
 
 </html>
