--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="styles.css?v=2" rel="stylesheet" />
+    <link href="styles.css?v=3" rel="stylesheet" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
     <script>
@@ -47,6 +46,9 @@
         <div class="heading-row">
             <h3 class="text-center">B L O G</h3>
         </div>
+        <div class="subheading-one">
+            <p>New content coming soon!</p>
+        </div>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
         <a class="footer-links" href="mailto:lachelle.anne@gmail.com"><img class="footer-icon"
@@ -58,9 +60,6 @@
         <a class="footer-links" href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/github.svg"
                 alt="github" /></a>
     </footer>
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/twitter-bootstrap/js/bootstrap.js"></script>
 </body>
 
 </html>
