updated css grid

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=3" rel="stylesheet" />
+    <link href="styles.css?v=4" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -43,26 +43,28 @@
         </div>
     </header>
     <div class="container">
-        <div class="heading-row">
+        <div class="heading-title">
             <h3 class="text-center">A B O U T</h3>
         </div>
-        <h5 class="subheading-one">EDUCATION
-        </h5>
-        <div class="about-column-one">
+        <div class="heading-subtitle">
+            <h5>EDUCATION
+            </h5>
+        </div>
+        <div class="education">
             <div class="bubble">
                 <p>DIPLOMA IN SOFTWARE DEVELOPMENT 2021</p>
                 <p><b>TAFE NSW</b></p>
                 <p>Completed Certificate</p>
             </div>
         </div>
-        <div class="about-column-two">
+        <div class="education">
             <div class="bubble">
                 <p>CERTIFICATE IV IN PROGRAMMING 2020</p>
                 <p><b>TAFE NSW</b></p>
                 <p>Completed Certificate</p>
             </div>
         </div>
-        <div class="about-column-three">
+        <div class="education">
             <div class="bubble">
                 <p>CERTIFICATE IN WORKFORCE ESSENTIALS 2016</p>
                 <p><b>Charles Sturt University</b></p>
