--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=3" rel="stylesheet" />
+    <link href="styles.css?v=4" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -43,13 +43,15 @@
         </div>
     </header>
     <div class="container">
-        <div class="heading-row">
+        <div class="heading-title">
             <h3 class="text-center">L A C H E L L E</h3>
             <h6 class="text-center">P A V L O V I C</h6>
         </div>
-        <h5 class="subheading-one">SKILLS
-        </h5>
-        <div class="home-column-one">
+        <div class="heading-subtitle">
+            <h5>SKILLS
+            </h5>
+        </div>
+        <div>
             <div class="bar">
                 <div class="info">
                     <span>HTML</span>
@@ -115,7 +117,7 @@
                 </div>
             </div>
         </div>
-        <div class="home-column-two">
+        <div class="home-image-column">
             <img class="profile-image" src="images/profile_img.jpg" alt="lachelle-anne">
         </div>
     </div>
