--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=3" rel="stylesheet" />
+    <link href="styles.css?v=4" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -43,10 +43,10 @@
         </div>
     </header>
     <div class="container">
-        <div class="heading-row">
+        <div class="heading-title">
             <h3 class="text-center">B L O G</h3>
         </div>
-        <div class="subheading-one">
+        <div class="heading-subtitle">
             <p>New content coming soon!</p>
         </div>
     </div>
