--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=3" rel="stylesheet" />
+    <link href="styles.css?v=4" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -43,11 +43,11 @@
         </div>
     </header>
     <div class="container">
-        <div class="heading-row">
+        <div class="heading-title">
             <h3 class="text-center">P R O J E C T S</h3>
         </div>
-        <h5 class="subheading-one">CALCULATOR</h4>
-            <div class="project-one">
+        <h5 class="heading-subtitle">CALCULATOR</h4>
+            <div class="project">
                 <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="result"
                     data-slug-hash="KKmrvxe" data-user="lachelle-anne" data-zoom="0.5"
                     style="height: 400px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
@@ -57,8 +57,8 @@
                 </p>
                 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
             </div>
-            <h5 class="project-title-two">SPOCK ROCK GAME</h5>
-            <div class="project-two">
+            <h5 class="heading-subtitle">SPOCK ROCK GAME</h5>
+            <div class="project">
                 <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="result"
                     data-slug-hash="MWmxVgL" data-user="lachelle-anne" data-zoom="0.5"
                     style="height: 400px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
