added blog entry

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=4" rel="stylesheet" />
+    <link href="styles.css?v=5" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -46,6 +46,14 @@
         <div class="heading-title">
             <h3 class="text-center">A B O U T</h3>
         </div>
+        <div class="paragraph">
+            <p>As a recent graduate from TAFE NSW, I aspire to gain experience and seek opportunities within the
+                industry to engage and work alongside a team of passionate developers.</p>
+            <p>Through gained knowledge from my studies, I have a greater understanding within full-stack
+                development
+                processes and have obtained soft
+                and technical skills to assist further in my career and education.</p>
+        </div>
         <div class="heading-subtitle">
             <h5>EDUCATION
             </h5>
@@ -73,13 +81,13 @@
         </div>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
-        <a class="footer-links" href="mailto:lachelle.anne@gmail.com"><img class="footer-icon"
+        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img class="footer-icon"
                 src="images/envelope-fill.svg" alt="email" /></a>
-        <a class="footer-links" href="https://www.instagram.com/la_codes/"><img class="footer-icon"
+        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/la_codes/"><img class="footer-icon"
                 src="images/instagram.svg" alt="instagram" /></a>
-        <a class="footer-links" href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon"
+        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon"
                 src="images/linkedin.svg" alt="linkedin" /></a>
-        <a class="footer-links" href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/github.svg"
+        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/github.svg"
                 alt="github" /></a>
     </footer>
 </body>
