--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=4" rel="stylesheet" />
+    <link href="styles.css?v=5" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -46,38 +46,37 @@
         <div class="heading-title">
             <h3 class="text-center">P R O J E C T S</h3>
         </div>
-        <h5 class="heading-subtitle">CALCULATOR</h4>
-            <div class="project">
-                <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="result"
-                    data-slug-hash="KKmrvxe" data-user="lachelle-anne" data-zoom="0.5"
-                    style="height: 400px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-                    <span>See the Pen <a href="https://codepen.io/lachelle-anne/pen/KKmrvxe">
-                        </a> by Lachelle (<a href="https://codepen.io/lachelle-anne">@lachelle-anne</a>)
-                        on <a href="https://codepen.io">CodePen</a>.</span>
-                </p>
-                <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-            </div>
-            <h5 class="heading-subtitle">SPOCK ROCK GAME</h5>
-            <div class="project">
-                <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="result"
-                    data-slug-hash="MWmxVgL" data-user="lachelle-anne" data-zoom="0.5"
-                    style="height: 400px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-                    <span>See the Pen <a href="https://codepen.io/lachelle-anne/pen/MWmxVgL">
-                            spock-rock-game</a> by Lachelle (<a
-                            href="https://codepen.io/lachelle-anne">@lachelle-anne</a>)
-                        on <a href="https://codepen.io">CodePen</a>.</span>
-                </p>
-                <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-            </div>
+        <h5 class="heading-subtitle">CALCULATOR</h5>
+        <div class="project">
+            <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="result"
+                data-slug-hash="KKmrvxe" data-user="lachelle-anne" data-zoom="0.5"
+                style="height: 400px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+                <span>See the Pen <a href="https://codepen.io/lachelle-anne/pen/KKmrvxe">
+                    </a> by Lachelle (<a href="https://codepen.io/lachelle-anne">@lachelle-anne</a>)
+                    on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </div>
+        <h5 class="heading-subtitle">SPOCK ROCK GAME</h5>
+        <div class="project">
+            <p class="codepen" data-height="400" data-theme-id="light" data-default-tab="result"
+                data-slug-hash="MWmxVgL" data-user="lachelle-anne" data-zoom="0.5"
+                style="height: 400px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+                <span>See the Pen <a href="https://codepen.io/lachelle-anne/pen/MWmxVgL">
+                        spock-rock-game</a> by Lachelle (<a href="https://codepen.io/lachelle-anne">@lachelle-anne</a>)
+                    on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </div>
     </div>
     <footer class="border-top border-light footer fixed-bottom">
-        <a class="footer-links" href="mailto:lachelle.anne@gmail.com"><img class="footer-icon"
+        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="mailto:lachelle.anne@gmail.com"><img class="footer-icon"
                 src="images/envelope-fill.svg" alt="email" /></a>
-        <a class="footer-links" href="https://www.instagram.com/la_codes/"><img class="footer-icon"
+        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/la_codes/"><img class="footer-icon"
                 src="images/instagram.svg" alt="instagram" /></a>
-        <a class="footer-links" href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon"
+        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/lachelle-anne/"><img class="footer-icon"
                 src="images/linkedin.svg" alt="linkedin" /></a>
-        <a class="footer-links" href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/github.svg"
+        <a class="footer-links" target="_blank" rel="noopener noreferrer" href="https://github.com/lachelle-anne"><img class="footer-icon" src="images/github.svg"
                 alt="github" /></a>
     </footer>
 </body>
